Fix loading pane background color and icon alignment

--- a/static/index.css
+++ b/static/index.css
@@ -143,12 +143,14 @@ div.dressing-room-buttons {
 }
 
 div.dressing-room-loader {
+    text-align: center;
+    vertical-align: middle;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: #FAFAFA;
     z-index: 2;
 }
 
